# Soil_Moisture_ESP32

./: .gitignore  CMakeLists.txt  README.md  enhanced_soil_server.py  soil_server.py
main/: CMakeLists.txt  main.c  main.h  soil-sensor-example-main.c  soil_project_main.c  soil_project_main.h  soil_sensor_example_main.c  soil_sensor_example_main.h
main/00_esp_idf_examples/: blink_example_main.c
main/01_testing/: battery_monitor_main.c  battery_monitor_main.h  hub_main.c  influx_db_main.c  influx_db_main.h  soil_monitor_main.c  soil_monitor_main.h  wifi_connection_main.c  wifi_connection_main.h
main/application/: battery_monitor.c  battery_monitor.h  battery_monitor_task.c  battery_monitor_task.h  espnow_sender.c  espnow_sender.h  influx_sender.c  influx_sender.h  influx_sender_task.c  influx_sender_task.h  influxdb_sender.c  influxdb_sender.h  measurement_task.c  measurement_task.h  mqtt_sender.c  mqtt_sender.h  mqtt_sender_task.c  mqtt_sender_task.h  soil_monitor_app.c  soil_monitor_app.h
main/application/http/: http_client.c  http_client.h
main/config/: esp32-config.h
main/drivers/adc/: adc.c  adc.h  adc_manager.c  adc_manager.h
main/drivers/csm_v2_driver/: csm_v2_driver.c  csm_v2_driver.h
main/drivers/espnow/: espnow.c  espnow.h
main/drivers/hal/: adc_hal.c  adc_hal.h
main/drivers/http/: http_buffer.c  http_buffer.h  http_client.c  http_client.h
main/drivers/influxdb/: influxdb_client.c  influxdb_client.h
main/drivers/led/: led.c  led.h
main/drivers/mqtt/: my_mqtt_driver.c  my_mqtt_driver.h
main/drivers/nvs/: nvs.c  nvs.h
main/drivers/wifi/: wifi_manager.c  wifi_manager.h
main/hal/: adc_hal.c
main/http/: http_client.c  http_client.h
main/utils/: esp_utils.c  esp_utils.h  ntp_time.c  ntp_time.h
main/wifi/: wifi_manager.c  wifi_manager.h
server/: db-test.ipynb  enhanced_soil_server.py  soil_server.py
